# openmoonray

./: .gitignore  .gitmodules  CMakeDWAPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakeMacOSPresets.json  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  README-macOS.md  README.md  SDKScript  THIRD-PARTY.md  flowpipeline.yaml  package.py  requirements.txt
.github/: pull_request_template.md
.github/workflows/: OnMerge.yml  SubmoduleUpdate.yml  cobalt_CI.yml  harmony_cd.yml  mac_CI_rats.yml  run-checkmarx.yml  run_CI_RaTS.yml  snyk.yml  test_CI.yml  trigger_CI.yml
.github/workflows/scripts/: build_and_test_variant.sh
arras/: CMakeLists.txt  README.md
arras/distributed/: CMakeLists.txt  README.md
arras/distributed/scripts/: CMakeLists.txt  README.md  run_arras_render  run_minicoord  run_node
build_scripts/: ispc_dso_generate
building/: .dockerignore  CMakeLists.txt  Dockerfile  Imath_include_paths.patch  README.md  apptainer.def  apptainer_build.md  centos7_build.md  container_build.md  embree_missing_type.patch  general_build.md  macOS_build.md  moonray-rocky9-base.def  moonray-rocky9-depbuild.def  moonray-rocky9-withoutQt.def  moonray-rocky9.def  repo_deps.md
building/Apptainer/: build.sh  minicoord.def  moonray.def
building/Centos7/: CMakeLists.txt  Dockerfile  centos7_build.md  centos7_container_build.md  install_packages.sh  oidn_find_tbb.patch  python-config.jam
building/Rocky9/: CMakeLists.txt  embree_missing_type.patch  install_packages.sh  rocky9_build.md  rocky9_container_build.md
building/Rocky9/pxr-houdini/: pxrTargets-release.cmake  pxrTargets.cmake
building/apptainer/: CMakeLists.txt  OpenColorIO.patch  minicoord.def  moonray-rocky9-base.def  moonray-rocky9-depbuild.def  moonray-rocky9.def  moonray.sh  qt5.sh  rocky9.sh
building/macOS/: Boost.patch  CMakeLists.txt  Embree.patch  OpenEXR.patch  OpenVDB.patch  Qt5.patch  USD.patch  log4plus-limit-threads.patch  macOS_build.md  qt_missing_cginclude.patch  user-config.jam
building/macOS/pxr-houdini/: pxrConfig.cmake  pxrTargets-release.cmake  pxrTargets.cmake
gui/: Dockerfile  config  run-vncserver  xstartup
moonray/: CMakeLists.txt
moonray/hydra/: CMakeLists.txt  README.md  plugInfo.json
moonray/hydra/cmake/: HdMoonrayCompileDefinitions.cmake  HdMoonrayCompileFeatures.cmake  HdMoonrayCompileOptions.cmake  HdMoonrayConfig.cmake.in  HdMoonrayLinkOptions.cmake
moonray/moonray_arras/: CMakeLists.txt
moonray/moonray_arras/cmake/: MoonrayArrasCompileDefinitions.cmake  MoonrayArrasCompileFeatures.cmake  MoonrayArrasCompileOptions.cmake  MoonrayArrasLinkOptions.cmake
scripts/: CMakeLists.txt  setup.sh
scripts/Rocky9/: setupHoudini.sh
scripts/macOS/: setupHoudini.sh
testdata/: box.rdla  curves.rdla  multi-level-instances.rdla  rectangle.rdla  sphere.rdla  sphere.usd  sphere2.rdla
tsc/: ccla.md  charter.md  icla.md
